# TechBirds

./: .env.example  .gitignore  DEPLOY_GUIDE.md  LAUNCH_CHECKLIST.md  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  .env.production.example  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_auth.py  0002_enquiries.py  0003_blog_posts.py  0004_punch_entries.py  0005_people_leave_feed.py  0006_payroll_documents.py
apps/api/app/: config.py  db.py  logging_config.py  main.py
apps/api/app/middleware/: __init__.py  security.py
apps/api/app/models/: __init__.py  attendance.py  auth.py  blog.py  enquiries.py  feed.py  leave.py  payroll.py  people.py
apps/api/app/routers/: attendance.py  auth.py  blog.py  dev_files.py  documents.py  enquiries.py  feed.py  health.py  leave.py  payroll.py  people.py
apps/api/app/schemas/: attendance.py  auth.py  blog.py  documents.py  enquiries.py  feed.py  leave.py  payroll.py  people.py
apps/api/app/services/: email.py  jwt.py  otp.py  payroll.py  pdf.py  rate_limit.py  storage.py  turnstile.py
apps/api/app/templates/: payslip.html
apps/api/scripts/: run-dev.cjs  seed_admin.py  seed_blog.py  seed_holidays.py  seed_leave.py  seed_payroll.py
apps/api/tests/: test_attendance.py  test_auth.py  test_blog.py  test_documents.py  test_enquiries.py  test_feed.py  test_health.py  test_leave.py  test_payroll.py  test_people.py
apps/app/: .env.production.example  index.html  (+4 more)
docs/: DEVELOPMENT.md  README.md
(+84 files in other folders)
